Enable passing port dynamically through gradle command

--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,10 @@ jar {
     version = '1.0.0'
 }
 
+bootRun {
+  systemProperties = System.properties
+}
+
 defaultTasks 'clean', 'bootRepackage'
 
 task stage {
